fixed overflow

--- a/src/calendar/assets/css/style.css
+++ b/src/calendar/assets/css/style.css
@@ -1,4 +1,16 @@
 /* GRID */
+
+.osome-cal-grid {
+    width:100%;
+    height:100%;
+    overflow-y:auto;
+    margin: 0;
+    position: absolute;
+}
+.osome-cal-grid::-webkit-scrollbar{
+    display:none;
+}
+
 .osome-cal-grid-week {
     position: relative;
     min-height: 120px;
@@ -113,14 +125,7 @@
     height: 32px;
     line-height: 32px;
     text-align: center;
-    box-sizing: border-box;
     padding-left:10px;
-}
-
-#osome-cal-grid {
-    margin: 0;
-    padding-top: 32px;
-
 }
 
 .text-blue {
